[ word space ] - add word spacing - rename letter spacing to "letter-sp" - partial fix for #6

--- a/src/components/text/__.scss
+++ b/src/components/text/__.scss
@@ -27,5 +27,6 @@ $text-bps:      $default-bps !default;
     @include text-color();
     @include text-decoration();
     @include text-transform();
+    @include word-spacing();
 
 }
