--- a/src/components/text/_spacing.scss
+++ b/src/components/text/_spacing.scss
@@ -1,5 +1,5 @@
 
-$letter-spacing-prop:   "ls" !default;
+$letter-spacing-prop:   "letter-sp" !default;
 $letter-spacings: (
 
     "3-":   -0.075em,
@@ -16,6 +16,9 @@ $letter-spacings: (
     "n":    normal,
 
 ) !default;
+
+$word-spacing-prop:   "word-sp" !default;
+$word-spacings: $letter-spacings !default;
 
 
 
@@ -40,6 +43,37 @@ $letter-spacings: (
 
                 .#{ $bp }#{ $p }#{ $key } {
                     letter-spacing: $val;
+                }
+
+            }
+
+        }
+
+    }
+
+}
+
+@mixin word-spacing( $bps: $text-bps ) {
+
+    $p: $word-spacing-prop;
+
+    @each $b in $bps {
+
+        @if $b == nth( $default-bps, 1 ) {
+            $b: "";
+        }
+
+        @include breakpoint( $b ) {
+
+            $bp: hyphen-after( $b );
+
+            @each $space in $word-spacings {
+
+                $key: nth( $space, 1 );
+                $val: nth( $space, 2 );
+
+                .#{ $bp }#{ $p }#{ $key } {
+                    word-spacing: $val;
                 }
 
             }
